host executables with scratch

--- a/docker/gorse-master/Dockerfile
+++ b/docker/gorse-master/Dockerfile
@@ -1,13 +1,23 @@
-FROM golang:1.15
+############################
+# STEP 1 build executable binary
+############################
+FROM golang:1.16
 
 ENV GOPROXY=https://goproxy.io,direct
 
-RUN mkdir -p $GOPATH/src/github.com/zhenghaoz && \
-    cd $GOPATH/src/github.com/zhenghaoz && \
-    git clone --depth 1 https://github.com/zhenghaoz/gorse.git && \
+RUN git clone --depth 1 https://github.com/zhenghaoz/gorse.git && \
     cd gorse && \
-    cd cmd/gorse-master && \
-    go build . && \
-    mv gorse-master $GOPATH/bin/
+    go get -v -t -d ./...
 
-CMD $GOPATH/bin/gorse-master -c /etc/config.toml
+RUN cd gorse/cmd/gorse-master && \
+    CGO_ENABLED=0 go build . && \
+    mv gorse-master /usr/bin
+
+############################
+# STEP 2 build a small image
+############################
+FROM scratch
+
+COPY --from=0 /usr/bin/gorse-master /usr/bin/gorse-master
+
+ENTRYPOINT ["/usr/bin/gorse-master", "-c", "/etc/config.toml"]
