build docker images in GitHub actions

--- a/.github/workflows/translate_issues.yml
+++ b/.github/workflows/translate_issues.yml
@@ -6,7 +6,8 @@ on:
     types: [opened]
 
 jobs:
-  build:
+  translate-isssues:
+    name: Translate Issues
     runs-on: ubuntu-latest
     steps:
       - name: Issues Translator
