--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -64,7 +64,8 @@ jobs:
         id: docker_build_master
         uses: docker/build-push-action@v2
         with:
-          context: docker/gorse-master
+          context: .
+          file: docker/gorse-master/Dockerfile
           push: true
           tags: zhenghaoz/gorse-master:${{ steps.tag_name.outputs.tag }}
           
@@ -72,7 +73,8 @@ jobs:
         id: docker_build_server
         uses: docker/build-push-action@v2
         with:
-          context: docker/gorse-server
+          context: .
+          file: docker/gorse-server/Dockerfile
           push: true
           tags: zhenghaoz/gorse-server:${{ steps.tag_name.outputs.tag }}
           
@@ -80,7 +82,8 @@ jobs:
         id: docker_build_worker
         uses: docker/build-push-action@v2
         with:
-          context: docker/gorse-worker
+          context: .
+          file: docker/gorse-worker/Dockerfile
           push: true
           tags: zhenghaoz/gorse-worker:${{ steps.tag_name.outputs.tag }}
           
