--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -9,6 +9,9 @@ jobs:
   docker_images:
     name: Docker Images
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        image: [gorse-master, gorse-server, gorse-worker]
     steps:
       - name: Pull source
         uses: actions/checkout@v1
@@ -22,37 +25,10 @@ jobs:
 #           username: ${{ secrets.DOCKERHUB_USERNAME }}
 #           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build master image
-        id: docker_build_master
+      - name: Build docker images
         uses: docker/build-push-action@v2.6.1
         with:
           context: .
-          file: docker/gorse-master/Dockerfile
+          file: docker/${{ matrix.image }}/Dockerfile
           push: false
-          tags: zhenghaoz/gorse-master:latest
-
-      - name: Build server image
-        id: docker_build_server
-        uses: docker/build-push-action@v2.6.1
-        with:
-          context: .
-          file: docker/gorse-server/Dockerfile
-          push: false
-          tags: zhenghaoz/gorse-server:latest
-
-      - name: Build worker image
-        id: docker_build_worker
-        uses: docker/build-push-action@v2.6.1
-        with:
-          context: .
-          file: docker/gorse-worker/Dockerfile
-          push: false
-          no-cache: true
-          tags: zhenghaoz/gorse-worker:latest
-
-      - name: Image digest
-        run: |
-          echo ${{ steps.docker_build_master.outputs.digest }}
-          echo ${{ steps.docker_build_server.outputs.digest }}
-          echo ${{ steps.docker_build_worker.outputs.digest }}
-
+          tags: zhenghaoz/${{ matrix.image }}:latest
