--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -30,5 +30,5 @@ jobs:
         with:
           context: .
           file: docker/${{ matrix.image }}/Dockerfile
-          push: false
+          push: true
           tags: zhenghaoz/${{ matrix.image }}:latest
