--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -44,6 +44,9 @@ jobs:
   build-docker-images:
     name: "Build Docker Images"
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        image: [gorse-master, gorse-server, gorse-worker]
     steps:
       - name: Pull source
         uses: actions/checkout@v1
@@ -60,36 +63,10 @@ jobs:
       - uses: olegtarasov/get-tag@v2.1
         id: tag_name
           
-      - name: Build master image
-        id: docker_build_master
+      - name: Build docker image
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: docker/gorse-master/Dockerfile
+          file: docker/${{ matrix.image }}/Dockerfile
           push: true
-          tags: zhenghaoz/gorse-master:${{ steps.tag_name.outputs.tag }}
-          
-      - name: Build server image
-        id: docker_build_server
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: docker/gorse-server/Dockerfile
-          push: true
-          tags: zhenghaoz/gorse-server:${{ steps.tag_name.outputs.tag }}
-          
-      - name: Build worker image
-        id: docker_build_worker
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: docker/gorse-worker/Dockerfile
-          push: true
-          tags: zhenghaoz/gorse-worker:${{ steps.tag_name.outputs.tag }}
-          
-      - name: Image digest
-        run: |
-          echo ${{ steps.docker_build_master.outputs.digest }}
-          echo ${{ steps.docker_build_server.outputs.digest }}
-          echo ${{ steps.docker_build_worker.outputs.digest }}
-  
+          tags: zhenghaoz/${{ matrix.image }}:${{ steps.tag_name.outputs.tag }}
