--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -68,6 +68,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           file: docker/${{ matrix.image }}/Dockerfile
           push: true
           tags: zhenghaoz/${{ matrix.image }}:${{ steps.tag_name.outputs.tag }}
