--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -29,6 +29,7 @@ jobs:
         uses: docker/build-push-action@v2.6.1
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           file: docker/${{ matrix.image }}/Dockerfile
           push: true
           tags: zhenghaoz/${{ matrix.image }}:latest
