--- a/docker/config.toml
+++ b/docker/config.toml
@@ -1,6 +1,8 @@
 # This section declares settings for the database.
 [database]
 # database for caching (support Redis only)
+# Tcp connection:
+# redis://<user>:<password>@<host>:<port>/<db_number>
 cache_store = "redis://redis:6379"
 # database for persist data (support MySQL/MongoDB/Redis)
 data_store = "mysql://gorse:gorse_pass@tcp(mysql:3306)/gorse?parseTime=true"
