--- a/config/config.toml.template
+++ b/config/config.toml.template
@@ -3,14 +3,14 @@
 
 # The database for caching, support Redis only:
 #   redis://<user>:<password>@<host>:<port>/<db_number>
-cache_store = "redis://localhost:6379"
+cache_store = "redis://localhost:6379/0"
 
 # The database for persist data, support MySQL, Postgres, ClickHouse and MongoDB:
 #   mysql://[username[:password]@][protocol[(address)]]/dbname[?param1=value1&...&paramN=valueN]
 #   postgres://bob:secret@1.2.3.4:5432/mydb?sslmode=verify-full
 #   clickhouse://user:password@host[:port]/database?param1=value1&...&paramN=valueN
 #   mongodb://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
-data_store = "mysql://root@tcp(localhost:3306)/gorse?parseTime=true"
+data_store = "mysql://root:password@tcp(localhost:3306)/gorse?parseTime=true"
 
 # The cache size for recommended/popular/latest items. The default value is 100.
 cache_size = 200
@@ -42,8 +42,7 @@ port = 8086                     # master port
 host = "0.0.0.0"                # master host
 http_port = 8088                # HTTP API port
 http_host = "0.0.0.0"           # HTTP API host
-search_jobs = 2                 # number of jobs for model search
-fit_jobs = 2                    # number of jobs for model fitting
+n_jobs = 4                      # number of working jobs
 meta_timeout = 10               # cluster meta timeout (second)
 
 # This section declares settings for the server node.
