--- a/docker/config.toml
+++ b/docker/config.toml
@@ -42,8 +42,7 @@ port = 8086                     # master port
 host = "0.0.0.0"                # master host
 http_port = 8088                # HTTP API port
 http_host = "0.0.0.0"           # HTTP API host
-search_jobs = 2                 # number of jobs for model search
-fit_jobs = 2                    # number of jobs for model fitting
+n_jobs = 4                      # number of working jobs
 meta_timeout = 10               # cluster meta timeout (second)
 
 # This section declares settings for the server node.
