--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -57,10 +57,12 @@ jobs:
         wget https://cdn.gorse.io/datasets/pinterest-20.zip -P ~/.gorse/download
         wget https://cdn.gorse.io/datasets/frappe.zip -P ~/.gorse/download
         wget https://cdn.gorse.io/datasets/ml-tag.zip -P ~/.gorse/download
+        wget https://cdn.gorse.io/datasets/criteo.zip -P ~/.gorse/download
         unzip ~/.gorse/download/ml-1m.zip -d ~/.gorse/dataset
         unzip ~/.gorse/download/pinterest-20.zip -d ~/.gorse/dataset
         unzip ~/.gorse/download/frappe.zip -d ~/.gorse/dataset
         unzip ~/.gorse/download/ml-tag.zip -d ~/.gorse/dataset
+        unzip ~/.gorse/download/criteo.zip -d ~/.gorse/dataset
 
     - name: Set up Go 1.x
       uses: actions/setup-go@v2
