--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -20,7 +20,7 @@ jobs:
         run: go get -v github.com/mitchellh/gox
         
       - name: Build release
-        run: gox -osarch='darwin/arm64 darwin/amd64 windows/amd64 linux/arm64 linux/amd64' ./...
+        run: gox -os='darwin windows linux' -arch='amd64 arm64' ./...
 
       - name: Install zip
         uses: montudor/action-zip@v0.1.1
@@ -30,6 +30,7 @@ jobs:
           zip gorse_linux_amd64.zip gorse-*_linux_amd64
           zip gorse_linux_arm64.zip gorse-*_linux_arm64
           zip gorse_windows_amd64.zip gorse-*_windows_amd64.exe
+          zip gorse_windows_arm64.zip gorse-*_windows_arm64.exe
           zip gorse_darwin_amd64.zip gorse-*_darwin_amd64
           zip gorse_darwin_arm64.zip gorse-*_darwin_arm64
           
