--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -100,9 +100,10 @@ jobs:
       run: bash <(curl -s https://codecov.io/bash)
 
   integrate_test:
-    name: Ingrate Test
+    name: Integrate Test
     runs-on: ubuntu-latest
     steps:
+     - uses: actions/checkout@v1
      - name: Build the stack
        working-directory: ./docker
        run: docker-compose up -d
