--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -118,3 +118,5 @@ jobs:
         max-attempts: 5
         # Delay between retries
         retry-delay: 5s
+        # Retry all errors, including 404. This option might trigger curl upgrade.
+        retry-all: yes
