add integrate test (#279)

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -1,4 +1,4 @@
-name: build
+name: build test
 
 on:
   push:
@@ -98,3 +98,25 @@ jobs:
 
     - name: Upload 
       run: bash <(curl -s https://codecov.io/bash)
+
+  integrate_test:
+    name: Integrate Test
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+
+    - name: Build the stack
+      working-directory: ./docker
+      run: docker-compose up -d
+
+    - name: Check the deployed service URL
+      uses: jtalk/url-health-check-action@v2
+      with:
+        # Check the following URLs one by one sequentially
+        url: http://127.0.0.1:8088/metrics|http://127.0.0.1:8087/metrics|http://127.0.0.1:8089/metrics
+        # Fail this action after this many failed attempts
+        max-attempts: 5
+        # Delay between retries
+        retry-delay: 5s
+        # Retry all errors, including 404. This option might trigger curl upgrade.
+        retry-all: true
