--- a/docker/gorse-master/Dockerfile
+++ b/docker/gorse-master/Dockerfile
@@ -26,4 +26,4 @@ COPY --from=0 /usr/bin/gorse-master /usr/bin/gorse-master
 
 ENV USER root
 
-ENTRYPOINT ["/usr/bin/gorse-master", "-c", "/etc/config.toml"]
+ENTRYPOINT ["/usr/bin/gorse-master", "-c", "/etc/gorse/config.toml"]
