remove redundant metrics

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - 6379:6379
   mysql:
-    image: mysql
+    image: mysql/mysql-server
     restart: unless-stopped
     ports:
       - 3306:3306
