--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -120,3 +120,30 @@ jobs:
         retry-delay: 5s
         # Retry all errors, including 404. This option might trigger curl upgrade.
         retry-all: true
+
+  compat_test:
+    name: Compatibility Test
+    runs-on: ubuntu-latest
+
+    services:
+      mariadb:
+        image: mariadb
+        ports:
+          - 3306
+        env:
+          MYSQL_ROOT_PASSWORD: password
+
+    steps:
+      - name: Set up Go 1.17.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17.x
+        id: go
+
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+
+      - name: Test MariaDB
+        run: go test ./storage/data -run ^TestMySQL_
+        env:
+          MYSQL_URI: mysql://root:password@tcp(localhost:${{ job.services.mariadb.ports[3306] }})/
